--- a/index.html
+++ b/index.html
@@ -4,6 +4,30 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>grid-lab</title>
+    <link rel="stylesheet" href="style.css">
   </head>
-  <body></body>
+  <body>
+    <div class="main-container">
+        <div class="grid-1">
+            <div>1</div>
+            <div>2</div>
+        </div>
+        <div class="grid-2">
+            <div>3</div>
+            <div>4</div>
+            <div  class="side-img">5</div>
+            <div>6</div>
+            <div>7</div>
+             
+        </div>
+
+        <div class="grid-3">
+            <div>9</div>
+            <div>10</div>
+            <div>11</div>
+        </div>
+
+    </div>
+
+  </body>
 </html>
