added content for first grid

--- a/index.html
+++ b/index.html
@@ -9,8 +9,20 @@
   <body>
     <div class="main-container">
         <div class="grid-1">
-            <div>1</div>
-            <div>2</div>
+            <div class="g1-content-container">
+                
+                <div class="g1-title-grid"> 
+                   <div>
+                    <h4>IPHONE 6S</h4>
+                    <h3>3D Touch. 12MP</h3>
+                    <h3>photos. 4K</h3>
+                    <h3>video.One powerful phone</h3>
+                    <h4>Learn more or visit an Apple Store today</h4>
+                   </div>
+                </div>
+                <div><img src="phone.png" alt="phone img"></div>
+            </div>
+             
         </div>
         <div class="grid-2">
             <div>3</div>
