fixed spacing for grid 1

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
                     <h4>Learn more or visit an Apple Store today</h4>
                    </div>
                 </div>
+                <div></div>
                 <div><img src="phone.png" alt="phone img"></div>
             </div>
              
