yellow flag added

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>grid-lab</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   </head>
   <body>
     <div class="main-container">
@@ -59,7 +60,7 @@
                 <div class="side-img-grid">
                     <div class="floppy-grid">
                         <div class="purple-circle">
-                            <h4>Popular</h4>
+                            <h4 class="Popular-title">Popular</h4>
                             <img src="floppy.png" alt="">
                             <h4>Meet</h4>
                         </div>
